--- a/polynomial-functor.cabal
+++ b/polynomial-functor.cabal
@@ -43,6 +43,7 @@ library
                     , typelits-witnesses
                     , finitary
                     , ghc-typelits-natnormalise
+                    , vector-sized
     hs-source-dirs:   src
     default-language: Haskell2010
 
