--- a/polynomial-functor.cabal
+++ b/polynomial-functor.cabal
@@ -44,6 +44,7 @@ library
                     , finitary
                     , ghc-typelits-natnormalise
                     , vector-sized
+                    , some
     hs-source-dirs:   src
     default-language: Haskell2010
 
