--- a/cabal.project
+++ b/cabal.project
@@ -1,6 +1,8 @@
 packages: polynomial-functor.cabal
 
+allow-newer: all
+
 source-repository-package
     type: git
-    location: /home/koji/Haskell/not-owned/typelits-witnesses
-    tag: 3666579b9522cfd639c4627692ce834fd031e521
+    location: https://github.com/viercc/typelits-witnesses.git
+    tag: 25adb0aa63f0bd2459e037139329679fad634113
