--- a/polynomial-functor.cabal
+++ b/polynomial-functor.cabal
@@ -36,7 +36,14 @@ common warnings
 
 library
     import:           warnings
-    exposed-modules:  Data.Functor.Polynomial, Data.Functor.Polynomial.Tag, Data.Finite.Extra, Data.GADT.Compare.Extra
+    exposed-modules:
+        Data.Functor.Polynomial,
+        Data.Functor.Polynomial.Tag,
+        Data.Functor.Polynomial.Class,
+        Data.Functor.Pow,
+        Data.Finite.Extra,
+        Data.GADT.HasSNat,
+        Data.GADT.Compare.Extra
     build-depends: 
         base >= 4.17 && < 4.19
       , finite-typelits
@@ -45,6 +52,7 @@ library
       , ghc-typelits-natnormalise
       , vector-sized
       , some
+      , kan-extensions
     hs-source-dirs:   src
     default-language: Haskell2010
 
