Use the true "singletons" package

--- a/finite-polynomial/finite-polynomial.cabal
+++ b/finite-polynomial/finite-polynomial.cabal
@@ -60,13 +60,13 @@ library
 
     -- Modules exported by the library.
     exposed-modules:
-      Data.Singleton,
       Data.Polynomial,
       Data.Polynomial.Functor
     
     -- Other library packages from which modules are imported.
     build-depends:
-      base >=4.18.1.0 && < 5
+      base >=4.18.1.0 && < 5,
+      singletons >= 3.0.2
 
     -- Directories containing source files.
     hs-source-dirs:   src
