--- a/cabal.project
+++ b/cabal.project
@@ -1,6 +1,8 @@
-packages: *.cabal
+packages: */*.cabal
+
+allow-newer: all
 
 source-repository-package
     type: git
     location: https://github.com/viercc/typelits-witnesses.git
-    tag: 25adb0aa63f0bd2459e037139329679fad634113
+    tag: 82f43921156a6f6c8f4216b4ada0dab17098994e
