Split Applicative/Monad deriving

--- a/finite-polynomial/finite-polynomial.cabal
+++ b/finite-polynomial/finite-polynomial.cabal
@@ -61,7 +61,8 @@ library
     -- Modules exported by the library.
     exposed-modules:
       Data.Polynomial,
-      Data.Polynomial.Functor
+      Data.Polynomial.Functor,
+      Data.Polynomial.Functor.Deriving
     
     -- Other library packages from which modules are imported.
     build-depends:
