--- a/polynomial-comonad/polynomial-comonad.cabal
+++ b/polynomial-comonad/polynomial-comonad.cabal
@@ -23,18 +23,19 @@ library
       Control.Category.OneObject,
       Control.Category.Dual,
       Control.Category.NatOrd,
-      PolyComonad,
-      PolyComonad.Boolean,
-      PolyComonad.Env,
-      PolyComonad.Store,
-      PolyComonad.Traced,
-      PolyComonad.NonEmpty,
-      Flow,
+      Control.Comonad.Action,
+      Control.Comonad.Travel,
+      Control.Comonad.Travel.Boolean,
+      Control.Comonad.Travel.Env,
+      Control.Comonad.Travel.Store,
+      Control.Comonad.Travel.Traced,
+      Control.Comonad.Travel.NonEmpty,
     -- other-modules:
     -- other-extensions:
     build-depends:
       base ^>=4.18.0.0,
       comonad,
+      transformers,
       kan-extensions,
       finite-typelits,
       singletons >= 3.0.2,
