Taking sum of Category (as in Control.Category) yields ICategory

--- a/polynomial-comonad/polynomial-comonad.cabal
+++ b/polynomial-comonad/polynomial-comonad.cabal
@@ -35,7 +35,8 @@ library
       Data.InternalCategory,
       Data.InternalCategory.Discrete,
       Data.InternalCategory.Clique,
-      Data.InternalCategory.PolyComonad
+      Data.InternalCategory.Morphism,
+      Data.InternalCategory.PolyComonad,
     -- other-modules:
     -- other-extensions:
     build-depends:
