--- a/polynomial-comonad/polynomial-comonad.cabal
+++ b/polynomial-comonad/polynomial-comonad.cabal
@@ -41,7 +41,7 @@ library
     -- other-modules:
     -- other-extensions:
     build-depends:
-      base ^>=4.18.0.0,
+      base >=4.18.0.0,
       comonad,
       transformers,
       kan-extensions,
@@ -64,5 +64,5 @@ test-suite polynomial-comonad-test
     hs-source-dirs:   test
     main-is:          Main.hs
     build-depends:
-        base ^>=4.18.0.0,
+        base >=4.18.0.0,
         polynomial-comonad
