--- a/polynomial-functor/polynomial-functor.cabal
+++ b/polynomial-functor/polynomial-functor.cabal
@@ -45,7 +45,7 @@ library
         Data.GADT.HasFinitary,
         Data.GADT.Compare.Extra
     build-depends: 
-        base >= 4.17 && < 4.20
+        base >= 4.17 && < 4.21
       , finite-typelits
       , finitary >= 2.1.3.0
       , singletons-minibase
@@ -65,6 +65,6 @@ test-suite polynomial-functor-test
     main-is:          Main.hs
 
     build-depends:
-        base >= 4.17 && < 4.19,
+        base,
         finitary,
         polynomial-functor
