--- a/finite-polynomial/finite-polynomial.cabal
+++ b/finite-polynomial/finite-polynomial.cabal
@@ -23,7 +23,7 @@ library
       Data.Polynomial.Functor.Deriving
     
     build-depends:
-      base >=4.18.1.0 && < 5,
+      base >=4.18.1.0,
       singletons >= 3.0.2
 
     hs-source-dirs:   src
