Quiver morphism (experiment)

--- a/polynomial-comonad/polynomial-comonad.cabal
+++ b/polynomial-comonad/polynomial-comonad.cabal
@@ -34,6 +34,7 @@ library
 
       Data.InternalQuiver,
       Data.InternalQuiver.Path,
+      Data.InternalQuiver.Morphism,
       Data.InternalCategory,
       Data.InternalCategory.Discrete,
       Data.InternalCategory.Codiscrete,
